--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SpeechMap</title>
+  <title>帶我去環遊世界XD</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="assets/show.PNG"/>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
